[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.3.0"
tokio = { version = "1.26.0", features = ["full"] }
actix-multipart = "0.6.0"
dotenv = "0.15.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio-postgres = { version = "0.7.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
] }
deadpool-postgres = "0.10.5"
uuid = "1.3.0"
chrono = "0.4.24"
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
anyhow = "1.0.70"
futures-util = "0.3.27"

[profile.release]
lto = true
codegen-units = 1
strip = true
