[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
