[package]
name = "retos-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
tokio ={ workspace = true }
actix-multipart = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
common = { version = "0.1.0", path = "../common"}